Closed Bug 492924 Opened 15 years ago Closed 15 years ago

Silverlight not working in latest nightlies

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: arnoud.bers, Assigned: jaas)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent:       Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 6.1; WOW64; Trident/4.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a1pre) Gecko/20090513 Minefield/3.6a1pre (.NET CLR 3.5.30729)

The silverlight plugin is not working at all in nightly builds starting 13-05-2009


Reproducible: Always

Steps to Reproduce:
1. Start Minefield
2. Go to a microsoft silverlight site
3. watch plugin not loading at all
Actual Results:  
no plugin loaded

Expected Results:  
Silverlight plugin loaded and visible
Extension!=Plugin, Firefox!=Gecko(Core) and which Silverlight plugin version number is used in your test ?
Component: Extension Compatibility → Plug-ins
Product: Firefox → Core
QA Contact: extension.compatibility → plugins
Version: unspecified → Trunk
Sorry about that..(although didn't know that it was the core and not firefox)
I use Silverlight 3 beta
Do you see the plugin in about:plugins ?
Did you already tried http://support.mozilla.com/en-US/kb/Safe+Mode to be sure that it's not caused by an addon ?
With a default profile and the 20090514 Mac (OS X 10.5.7) build:
Only a blue gradient background loads. The actual contents is nowhere to be seen. I checked with Gecko 1.9.0.11pre builds to see what 'should' happen.

And it is _not_ an issue of bad/stupid browser detection.

Silverlight: Version: 2.0.40115.0

Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090514 Minefield/3.6a1pre
OS: Windows 7 → All
Hardware: x86_64 → All
Safe mode doesn't help

problem still exists in nightly
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a1pre) Gecko/20090514 Minefield/3.6a1pre (.NET CLR 3.5.30729)

my exact Silverlight version is: 3.0.40307.0
about:plugins tells me silverlight plugin is enabled
Silverlight Plug-In

    File name: npctrl.dll
    Version: 3.0.40307.0
    3.0.40307.0

MIME Type 	Description 	Suffixes 	Enabled
application/x-silverlight 	npctrl 	scr 	Yes
application/x-silverlight-2 			Yes
still silverlight not working in latest nightly
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2a1pre) Gecko/20090527 Minefield/3.6a1pre (.NET CLR 4.0.20506)
Confirmed with latest trunk on Windows XP that Silverlight is not working on http://silverlight.net/Showcase/
Regression range is http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=515054a2dc43&tochange=c7b717f0a404
Blocks: 474157
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Assignee: nobody → joshmoz
Flags: in-litmus?
It isn't that silverlight doesn't work at all, it is that it doesn't work with some silverlight instances that use npruntime for scripting. Specifically, load this:

http://www.microsoft.com/silverlight/

And you'll see the following error in the JS error console:

Error: Trying to set unsupported property on NPObject!
Source File: http://www.microsoft.com/silverlight/scripts/silverlight/fmashowcase/FmaShowcase.xaml.loaded.js
Line: 58
Attached patch fix v1.0Splinter Review
Copy/paste error in part 1 patch from bug 474157, easy fix. I'll make a test too.
Attachment #380332 - Flags: superreview?(jst)
Attachment #380332 - Flags: superreview?(jst) → superreview?(roc)
Attachment #380332 - Flags: superreview?(roc) → superreview+
pushed to mozilla-central

http://hg.mozilla.org/mozilla-central/rev/524477378eb1
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Verified fix on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090717 Minefield/3.6a1pre. 
running: Silverlight.plugin 3.0.40624.0
Status: RESOLVED → VERIFIED
Updated https://litmus.mozilla.org/show_test.cgi?id=9045 - we should be all set here for a manual test.
Flags: in-litmus? → in-litmus+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: