Fix typo reversing some npruntime logic, fixes some problems with plugins using scripting. b=492924 sr=roc